# Drone-Mapper

./: .dockerignore  .gitignore  ASSESSMENT.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  WORKPLAN.md  bonus.txt  frontier_based_bfs_summary.md  vcpkg.json
.github/workflows/: ci.yml
data/: drone_config.txt  map_input.txt  mission_config.txt
docs/: HLD.md  algorithm_scan_logic.md  building_map_and_output.md  ci_test_suites.md  config_parsing_design.md  drone_algorithm.md  exploration_frontier.md  simulation_overview.md  test_maps.md
docs/diagrams/: class_diagram.puml  sequence_diagram.puml
include/common/: Point3D.h  Types.h
include/config/: DroneConfig.h  MissionConfig.h
include/drivers/: IMovementDriver.h
include/mapping/: IBuildingMap.h  MapTypes.h
include/sensors/: ILidarSensor.h  IPositionSensor.h  LidarTypes.h
scripts/: generate_test_maps.py
src/: main.cpp
src/algorithm/: BlindSpotAnalyzer.cpp  BlindSpotAnalyzer.h  DroneAlgorithm.cpp  DroneAlgorithm.h  ExplorationFrontier.cpp  ExplorationFrontier.h  SphericalScanner.cpp  SphericalScanner.h
src/common/: Logger.cpp  Logger.h  MathUtils.h
src/config/: ConfigParseUtil.h  DroneConfigParser.cpp  DroneConfigParser.h  MissionConfigParser.cpp  MissionConfigParser.h
src/io/: ErrorLogger.cpp  ErrorLogger.h  MapFileReader.cpp  MapFileReader.h  MapFileWriter.cpp  MapFileWriter.h
src/mapping/: BuildingMap.cpp  BuildingMap.h  Scorer.cpp  Scorer.h  SparseKey.cpp  SparseKey.h
src/simulation/: CollisionDetector.cpp  CollisionDetector.h  LidarBeamCalculator.cpp  LidarBeamCalculator.h  LidarMock.cpp  LidarMock.h  MovementMock.cpp  MovementMock.h  PositionMock.cpp  PositionMock.h  SimulationState.cpp  SimulationState.h
test_data/: drone_config.txt  map_input.txt  mission_config.txt
test_data/maps/: map_dead_end.txt  map_enclosed_room.txt  map_impassable_gap.txt  map_low_obstacles.txt  map_narrow_corridor.txt  map_open_room.txt  map_pillars.txt  mission_dead_end.txt  mission_enclosed_room.txt  mission_impassable_gap.txt  mission_low_obstacles.txt  mission_narrow_corridor.txt  mission_open_room.txt  mission_pillars.txt
tests/: CMakeLists.txt  test_building_map.cpp  test_collision_detector.cpp  test_config_parser.cpp  test_drone_algorithm.cpp  test_exploration_frontier.cpp  test_integration.cpp  test_lidar_beam_calculator.cpp  test_lidar_mock.cpp  test_movement_mock.cpp  test_position_mock.cpp  test_scorer.cpp  test_simulation_state.cpp
visualizer/: CMakeLists.txt  CameraController.cpp  CameraController.h  MapRenderer.cpp  MapRenderer.h  main_visualizer.cpp
